--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Computational Physics @ Creighton University - Spring 2021 </h1>
 <p>I'm hosted with GitHub Pages.
 Test 1 on April 29 2021 at 10:27 am
   </p>
