--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <h1>Computational Physics @ Creighton University - Spring 2021 </h1>
 <p>I'm hosted with GitHub Pages.
 Test 1 on April 29 2021 at 10:27 am
+Test 2 on May 11 2021 at 9:40 am CT
+<a href="https://www.w3schools.com/">Visit W3Schools.com!</a> 
   </p>
 </body>
 </html>
