--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>I'm hosted with GitHub Pages.
 Test 1 on April 29 2021 at 10:27 am
 Test 2 on May 11 2021 at 9:40 am CT
-<a href="https://www.w3schools.com/">Visit W3Schools.com!</a> 
+<a href="https://github.com/PatSoto-BioPhys/ComputationalPhysicsSpring2021/DoublePnedulum_Ellie_and_joanna.html">Computational Essay: Doubel pendulum</a> 
   </p>
 </body>
 </html>
